traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:36: error: ';' expected but 'else' found.
    else if (estFaceMur() && getDirection() == Direction.WEST) {
    ^Snake:48: error: Unmatched closing brace '}' ignored here
}
^